--- a/titanic_clean_predict.ipynb
+++ b/titanic_clean_predict.ipynb
@@ -6,7 +6,7 @@
       "name": "titanic_clean_predict.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNQn8xgdHdu1Weh2u6eHeEr",
+      "authorship_tag": "ABX9TyOt0sjQp6d7vX76NlA2e66C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,6 +24,19 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/paton838/works/blob/master/titanic_clean_predict.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "w8-G54KLVrve",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Source: https://www.kaggle.com/c/titanic"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
