--- a/data-science/titanic/titanic_clean_predict.ipynb
+++ b/data-science/titanic/titanic_clean_predict.ipynb
@@ -6,7 +6,7 @@
       "name": "titanic_clean_predict.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMOEEJXUkwgbx0l+vbovk0/",
+      "authorship_tag": "ABX9TyOvk1s3x0PRJeo7+fyhlEmU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -249,7 +249,7 @@
         "    dataset.loc[(dataset['Age'] > 16) & (dataset['Age'] <= 35), 'Age'] = 1\n",
         "    dataset.loc[(dataset['Age'] > 35) & (dataset['Age'] <= 50), 'Age'] = 2\n",
         "    dataset.loc[(dataset['Age'] > 50) & (dataset['Age'] <= 65), 'Age'] = 3\n",
-        "    dataset.loc[ dataset['Age'] > 65, 'Age']"
+        "    dataset.loc[ dataset['Age'] > 65, 'Age']                           = 4"
       ],
       "execution_count": 0,
       "outputs": []
@@ -275,7 +275,7 @@
       "metadata": {
         "id": "HbsADQV8NGOA",
         "colab_type": "code",
-        "outputId": "95ae8507-8f85-4e19-a4c0-ae2ee644872b",
+        "outputId": "ef659294-9bfa-4947-d9af-5ef6cf334bab",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -285,7 +285,7 @@
         "# get some sample to ensure the df makes sense\n",
         "train.sample(5)"
       ],
-      "execution_count": 138,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -322,64 +322,64 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>355</th>\n",
+              "      <th>171</th>\n",
               "      <td>0</td>\n",
               "      <td>3</td>\n",
               "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>634</th>\n",
-              "      <td>0</td>\n",
-              "      <td>3</td>\n",
-              "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>2</td>\n",
-              "      <td>0</td>\n",
+              "      <td>2</td>\n",
               "      <td>5</td>\n",
-              "      <td>0</td>\n",
-              "      <td>2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>13</th>\n",
-              "      <td>0</td>\n",
-              "      <td>3</td>\n",
-              "      <td>1</td>\n",
-              "      <td>2</td>\n",
-              "      <td>3</td>\n",
-              "      <td>0</td>\n",
-              "      <td>6</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>869</th>\n",
-              "      <td>1</td>\n",
-              "      <td>3</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>2</td>\n",
               "      <td>0</td>\n",
               "      <td>4</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>777</th>\n",
+              "      <th>855</th>\n",
               "      <td>1</td>\n",
               "      <td>3</td>\n",
               "      <td>0</td>\n",
+              "      <td>1</td>\n",
               "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>271</th>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>747</th>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
               "      <td>1</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>1</td>\n",
               "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>17</th>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -387,17 +387,17 @@
             ],
             "text/plain": [
               "     Survived  Pclass  Sex  Age  Fare  Embarked  Companion  IsAlone  Title\n",
-              "355         0       3    1    1     0         0          0        1      1\n",
-              "634         0       3    0    0     2         0          5        0      2\n",
-              "13          0       3    1    2     3         0          6        0      1\n",
-              "869         1       3    1    0     1         0          2        0      4\n",
-              "777         1       3    0    0     1         0          0        1      2"
+              "171         0       3    1    0     2         2          5        0      4\n",
+              "855         1       3    0    1     0         0          1        0      3\n",
+              "271         1       3    1    1     0         0          0        1      1\n",
+              "747         1       2    0    1     1         0          0        1      2\n",
+              "17          1       2    1    1     1         0          0        1      1"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 138
+          "execution_count": 17
         }
       ]
     },
@@ -420,7 +420,7 @@
       "metadata": {
         "id": "J8z2xc40NNNp",
         "colab_type": "code",
-        "outputId": "d096dfef-f7e2-48e1-b414-8f1b078d16d3",
+        "outputId": "b42046e6-11ec-4f20-9254-c0b243b9369c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
@@ -440,15 +440,15 @@
         "print('Score of the 15 runs:')\n",
         "print(scores)"
       ],
-      "execution_count": 140,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Score of the 15 runs:\n",
-            "[0.21666667 0.21666667 0.18333333 0.2        0.26666667 0.13333333\n",
-            " 0.20338983 0.16949153 0.22033898 0.18644068 0.16949153 0.20338983\n",
-            " 0.23728814 0.16949153 0.22033898]\n"
+            "[0.25       0.2        0.16666667 0.21666667 0.23333333 0.13333333\n",
+            " 0.20338983 0.16949153 0.22033898 0.16949153 0.16949153 0.18644068\n",
+            " 0.18644068 0.20338983 0.16949153]\n"
           ],
           "name": "stdout"
         }
@@ -459,7 +459,7 @@
       "metadata": {
         "id": "-eBwklrjNtic",
         "colab_type": "code",
-        "outputId": "49e9853b-40a5-48f7-e852-bf6de35e84bc",
+        "outputId": "c8d84e21-2031-4aa8-f097-5f3bc0745222",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -469,13 +469,13 @@
         "print('Average score:')\n",
         "print(scores.mean())"
       ],
-      "execution_count": 141,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Average score:\n",
-            "0.19975517890772126\n"
+            "0.19186440677966102\n"
           ],
           "name": "stdout"
         }
@@ -486,7 +486,7 @@
       "metadata": {
         "id": "46PrhI3YPu0-",
         "colab_type": "code",
-        "outputId": "4584c358-5984-4654-e083-32120d1c53fb",
+        "outputId": "4ac01ec6-61ee-4b65-bd1c-80a7a78da2d5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 221
@@ -498,19 +498,19 @@
         "predictions = gbm.predict(x_test)\n",
         "print(predictions)"
       ],
-      "execution_count": 142,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[0 1 0 0 1 0 1 0 1 0 0 0 1 0 1 1 0 0 1 1 0 0 1 0 1 0 1 0 0 0 0 0 1 1 0 0 1\n",
-            " 1 0 0 0 0 0 1 1 0 0 0 1 1 0 0 1 1 0 0 0 0 0 1 0 0 0 1 1 1 1 0 0 1 1 0 1 0\n",
-            " 1 0 0 1 0 1 0 0 0 0 0 0 1 1 1 0 1 0 1 0 0 0 1 0 1 0 1 0 0 0 1 0 0 0 0 0 0\n",
-            " 1 1 1 1 0 0 1 0 1 1 0 1 0 0 1 0 1 0 0 0 1 1 0 0 0 0 0 1 0 0 1 0 0 0 0 0 0\n",
-            " 0 1 1 0 0 1 0 0 1 1 0 1 1 0 1 0 1 1 0 0 1 1 0 0 0 0 0 1 1 0 1 1 0 0 1 0 1\n",
+            "[0 1 0 0 1 0 1 0 1 0 0 0 1 0 1 1 0 0 1 1 0 0 1 1 1 0 1 0 0 0 0 0 1 1 1 0 1\n",
+            " 1 0 0 0 0 0 1 1 0 0 0 1 0 1 0 1 1 0 0 0 0 0 1 0 0 0 1 1 1 1 0 0 0 1 0 1 0\n",
+            " 1 1 0 1 0 1 0 0 0 0 0 0 1 1 1 1 1 0 1 0 0 0 1 0 1 0 1 0 0 0 1 0 0 0 0 0 0\n",
+            " 1 1 1 1 0 0 1 0 1 1 0 1 0 0 1 0 1 0 0 0 1 0 0 0 0 0 0 1 0 0 1 0 0 0 0 0 0\n",
+            " 0 1 1 0 0 0 0 0 1 1 0 1 1 0 1 0 0 1 0 0 1 1 0 0 0 0 0 1 1 0 1 1 0 0 1 0 1\n",
             " 0 1 0 0 0 0 0 0 0 1 0 1 1 0 1 1 0 1 1 0 0 1 0 1 0 0 0 0 1 0 0 1 0 1 0 1 0\n",
-            " 1 0 1 1 0 1 0 0 0 1 0 0 0 0 0 0 1 1 1 1 0 0 0 0 1 0 1 1 1 0 0 0 0 0 0 0 1\n",
-            " 0 0 0 1 1 0 0 0 0 1 0 0 0 1 1 0 1 0 0 0 0 1 0 1 1 1 0 0 0 0 0 0 1 0 1 0 0\n",
+            " 1 0 1 1 0 1 0 0 0 1 0 0 0 0 0 0 1 1 1 1 0 0 0 0 1 0 1 1 1 0 1 0 0 0 0 0 1\n",
+            " 0 0 0 1 1 0 0 0 0 1 0 0 0 1 1 0 1 0 0 0 0 1 0 1 1 1 0 0 1 0 0 0 1 0 1 0 0\n",
             " 1 0 0 0 0 0 0 0 1 1 0 0 0 1 0 0 0 1 1 1 0 0 0 0 0 0 0 0 1 0 1 0 0 0 1 0 0\n",
             " 1 0 0 0 0 0 0 0 0 0 1 0 1 0 1 0 1 1 0 0 0 1 0 1 0 0 1 0 1 1 0 1 0 0 1 1 0\n",
             " 0 1 0 0 1 1 0 0 0 0 0 0 1 1 0 1 0 0 0 0 0 1 0 0 0 1 0 1 0 0 1 0 1 0 0 0 0\n",
@@ -525,7 +525,7 @@
       "metadata": {
         "id": "URKx7MRDREgU",
         "colab_type": "code",
-        "outputId": "1ae1cb46-b954-48f1-fa04-ccc40c814ff1",
+        "outputId": "c23bd84e-6ead-4db7-9821-77219b3760b5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
@@ -536,17 +536,17 @@
         "submission = pd.DataFrame({ 'PassengerId': TestPassengerId, 'Survived': predictions })\n",
         "print(submission.sample(5))"
       ],
-      "execution_count": 143,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "     PassengerId  Survived\n",
-            "213         1105         1\n",
-            "314         1206         1\n",
-            "165         1057         1\n",
-            "204         1096         0\n",
-            "300         1192         0\n"
+            "273         1165         1\n",
+            "199         1091         1\n",
+            "175         1067         1\n",
+            "277         1169         0\n",
+            "286         1178         0\n"
           ],
           "name": "stdout"
         }
