--- a/data-science/titanic/titanic_analysis.ipynb
+++ b/data-science/titanic/titanic_analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "titanic_analysis",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMOxe68ZXATO8kO4zyQQIeS",
+      "authorship_tag": "ABX9TyMahGiPUILS6Qa6Ad6er+br",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2434,11 +2434,11 @@
       "source": [
         "**Summary**\n",
         "\n",
-        "- The infants were most likely to survive, followed by the young people (less than 15 years old), then the people after the middle age and just before the old age (about 46 to 65 years old - possibly with higher status and more wealth), and then the young and/or adults (about 16 to 45 years old). The old people (more than about 66 years old) has the lowest survival rate.\n",
+        "- The infants were most likely to survive, followed by the young people (less than 15 years old), then the people after the middle age and just before the old age (about 46 to 65 years old - possibly with higher status and more wealth), and then the young and/or adults (about 16 to 45 years old). The old people (more than about 66 years old) have the lowest survival rate.\n",
         "- The people who have purchased the more expensive tickets have a much higher chance to survive than the ones who bought cheaper tickets.\n",
         "- Females (especially the married ones) have the highest survival rate, followed by the people with special titles (possibly higher status). The Mr. have the lowest survival rate.\n",
         "- The people with a small to medium sized family was more likely to survive than the ones with a large family (with a total number of companions of more than 3).\n",
-        "- The people embarked from Cherbourg has the highest survival rate, followed by Queenstown, Southampton."
+        "- The people embarked from Cherbourg have the highest survival rate, followed by Queenstown, Southampton."
       ]
     }
   ]
