--- a/data-science/titanic/titanic_analysis.ipynb
+++ b/data-science/titanic/titanic_analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "titanic_analysis",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMahGiPUILS6Qa6Ad6er+br",
+      "authorship_tag": "ABX9TyMrSXqUrFQR7n3Z1YYxyzIz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -709,7 +709,7 @@
       "source": [
         "The chart above shows that as the number of companions increases (but not more than 3), the chances of survival also increases. However, this trend does not follow the same pattern once the number of companions is more than 3.\n",
         "\n",
-        "This shows that the number of companions has a non-linear relationship with the survival rate."
+        "This suggests that the number of companions has a non-linear relationship with the survival rate."
       ]
     },
     {
