--- a/data-science/titanic/titanic_analysis.ipynb
+++ b/data-science/titanic/titanic_analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "titanic_analysis",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMrSXqUrFQR7n3Z1YYxyzIz",
+      "authorship_tag": "ABX9TyM6W88syTP+tTKmICOAzOTu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -111,7 +111,7 @@
       "source": [
         "df.info()"
       ],
-      "execution_count": 394,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -165,7 +165,7 @@
       "source": [
         "df.describe()"
       ],
-      "execution_count": 395,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -313,7 +313,7 @@
       "source": [
         "**Number of Companions vs Survival**\n",
         "\n",
-        "Let's add a Companion column to indicate if the number of companions the person has."
+        "Let's add a Companion column to indicate if the number of companions (family members) the person had on board."
       ]
     },
     {
@@ -331,7 +331,7 @@
         "df['Companion'] = df['SibSp'] + df['Parch']\n",
         "df.head()"
       ],
-      "execution_count": 396,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -488,7 +488,7 @@
         "summ = df[['Companion', 'Survived']].groupby(['Companion'], as_index=False).agg(['mean', 'count'], as_index=False)\n",
         "summ"
       ],
-      "execution_count": 397,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -616,7 +616,7 @@
         "pd.crosstab(df['Companion'], df['Survived'], normalize='index') \\\n",
         "  .plot(kind='bar', stacked=True, title=\"Survived by Number of Companion (%)\")"
       ],
-      "execution_count": 398,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -654,7 +654,7 @@
       "source": [
         "Most of the people in the subset of data recorded were alone (537 people), and the survival rate increases as the number of companion increases to up to 3, and decreases after having more than 3 companions.\n",
         "\n",
-        "This table also indicates that the people who have the highest survival chances (72%) have a family size of 3, which is a medium size family"
+        "This table also indicates that the people who have the highest survival chances (72%) have a total of family members of 3 (not including self), which is a medium size family."
       ]
     },
     {
@@ -671,7 +671,7 @@
       "source": [
         "sns.barplot(x=summ.index, y=summ['Survived']['mean'])"
       ],
-      "execution_count": 399,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -707,7 +707,7 @@
         "colab_type": "text"
       },
       "source": [
-        "The chart above shows that as the number of companions increases (but not more than 3), the chances of survival also increases. However, this trend does not follow the same pattern once the number of companions is more than 3.\n",
+        "Similarily, this chart shows that as the number of companions increases (but not more than 3), the chances of survival also increases. However, this trend does not follow the same pattern once the number of companions is more than 3.\n",
         "\n",
         "This suggests that the number of companions has a non-linear relationship with the survival rate."
       ]
@@ -736,7 +736,7 @@
       "source": [
         "df[['Pclass', 'Survived']].groupby(['Pclass']).agg(['mean', 'count'])"
       ],
-      "execution_count": 400,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -847,7 +847,7 @@
       "source": [
         "df[['Sex', 'Survived']].groupby(['Sex']).agg(['mean', 'count'])"
       ],
-      "execution_count": 401,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -935,7 +935,9 @@
         "colab_type": "text"
       },
       "source": [
-        "**Age vs Survival**"
+        "**Age vs Survival**\n",
+        "\n",
+        "How did the Age affect the Survival Rate?"
       ]
     },
     {
@@ -952,7 +954,7 @@
       "source": [
         "df.groupby(['Survived'])['Age'].mean()\n"
       ],
-      "execution_count": 402,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -974,7 +976,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "HbTkqlkIo-6K",
+        "id": "BXZaK5CBz3Jz",
         "colab_type": "text"
       },
       "source": [
@@ -995,7 +997,7 @@
       "source": [
         "sns.boxplot(data=df, x='Survived', y='Age')"
       ],
-      "execution_count": 403,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1031,9 +1033,9 @@
         "colab_type": "text"
       },
       "source": [
-        "This plot suggests that the median age is about the same.\n",
+        "This plot suggests that the median age is about the same as well.\n",
         "\n",
-        "However, overall, the people who died tend to be older than the people who survived."
+        "However, overall, the people who died tend to be older than the people who survived - the area between upper quartile and lower quartile of not survived is higher than survived."
       ]
     },
     {
@@ -1061,7 +1063,7 @@
         "g = sns.FacetGrid(df, col='Survived')\n",
         "g.map(plt.hist, 'Age', bins=20)"
       ],
-      "execution_count": 404,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1107,11 +1109,11 @@
       "metadata": {
         "id": "ZZT8mHiJeYtO",
         "colab_type": "code",
+        "outputId": "675ad3be-5434-4f17-d6fa-2131b66b62a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 542
-        },
-        "outputId": "675ad3be-5434-4f17-d6fa-2131b66b62a9"
+        }
       },
       "source": [
         "fig, (ax_age, ax_age_all) = plt.subplots(2, 1, figsize=(20,8))\n",
@@ -1131,7 +1133,7 @@
         "ax_age_all_plot = pd.crosstab(df[\"Age\"], df[\"Survived\"], normalize='index')\n",
         "ax_age_all_plot.plot(kind='bar', stacked=True, title='Age vs Survival', ax=ax_age_all)"
       ],
-      "execution_count": 427,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1203,7 +1205,7 @@
         "df2 = df[['Survived', 'Fare']]\n",
         "df2.groupby(['Fare'])['Survived'].agg(['mean', 'count'])"
       ],
-      "execution_count": 406,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1322,7 +1324,7 @@
       "source": [
         "df[['Survived', 'Embarked']].groupby(['Embarked']).agg(['mean', 'count'])"
       ],
-      "execution_count": 407,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1459,7 +1461,7 @@
         "        .agg(['mean', 'count'])\n",
         "summ"
       ],
-      "execution_count": 409,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1585,7 +1587,7 @@
         "plt.title('Embarked vs Gender (Male Ratio)')\n",
         "plt.ylabel('Mean - Male Ratio')"
       ],
-      "execution_count": 410,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1640,7 +1642,7 @@
         "plt.title('Embarked vs Fare (in Fare Categories: Higher Fare Category = Higher Fare Paid)')\n",
         "plt.ylabel('Mean - Fare Categories')"
       ],
-      "execution_count": 411,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1731,7 +1733,7 @@
         "a3 = pd.crosstab(s_companion[\"Companion\"], s_companion[\"Survived\"], normalize='index')\n",
         "a3.plot(kind='bar', stacked=True, title='S', ax=ax3)"
       ],
-      "execution_count": 413,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1775,7 +1777,7 @@
         "g = sns.catplot(x=\"Companion\", y=\"Survived\", col='Embarked', data=df, \n",
         "                kind=\"bar\", height=3, aspect=1.45, col_order=['C','Q','S']);"
       ],
-      "execution_count": 414,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1799,7 +1801,7 @@
         "colab_type": "text"
       },
       "source": [
-        "These charts suggests that there were some large families embarked from Southampton, while the family size of the people embarked from Queenstown and Cherbourg were much smaller."
+        "These charts suggests that there were some large families (number of companions >5) embarked from Southampton, while the family size of the people embarked from Queenstown and Cherbourg were much smaller (in the current train dataset, everyone from Queenstown and Cherbourg had a number of companions <=5)."
       ]
     },
     {
@@ -1828,7 +1830,7 @@
         "plt.title('Embarked vs Ticket Class (Lower the number Better the Ticket Class)')\n",
         "plt.ylabel('Mean - Ticket Class')"
       ],
-      "execution_count": 415,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1876,7 +1878,6 @@
       "source": [
         "**Embarked - Summary**\n",
         "\n",
-        "\n",
         "This result suggests that the people embarked from Cherbourg were more likely to survive was because there were more females, the family size were small to medium, and they have generally paid for more expensive tickets. "
       ]
     },
@@ -1915,7 +1916,7 @@
         "df['Title'] = df['Name'].apply(get_title)\n",
         "df.head()"
       ],
-      "execution_count": 416,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2093,7 +2094,7 @@
       "source": [
         "df.groupby(['Title'])['Survived'].agg(['mean', 'count'], result_type='expand').sort_values(by='mean', ascending=False)"
       ],
-      "execution_count": 418,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2211,7 +2212,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 419,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2379,7 +2380,7 @@
         ").corr()\n",
         "sns.heatmap(f, annot=True, robust=True, square=True)"
       ],
-      "execution_count": 420,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
